[package]
name = "skia_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = "0.49.1"
log = "0.4.14"
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
ndk = {version = "0.4.0", features = ["trace"]}
android_logger = "0.10"

[lib]
crate_type = ["staticlib", "dylib"]